<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="com.example.practice.MainViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/tv_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/heading"
            android:textColor="@color/burnt_orange"
            android:textSize="38sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="@id/tv_heading"
            app:layout_constraintTop_toBottomOf="@id/tv_heading" />

        <TextView
            android:id="@+id/tv_pan_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/pan_number"
            android:textColor="@color/light_black"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="@id/tv_heading"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pan_input_layout"
            style="@style/StyleInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/text_input_outline"
            android:imeOptions="actionDone"
            android:padding="8dp"
            app:boxBackgroundMode="outline"
            app:layout_constraintTop_toBottomOf="@id/tv_pan_heading">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_pan_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/edittext_grey_background_color"
                android:inputType="textNoSuggestions"
                android:paddingTop="8dp"
                android:paddingBottom="5dp"
                android:textColor="@color/black"
                android:textCursorDrawable="@drawable/ic_green_cursor"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_birth_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/birth_date"
            android:textColor="@color/light_black"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="@id/tv_heading"
            app:layout_constraintTop_toBottomOf="@id/pan_input_layout" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_day"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/text_input_outline"
            android:gravity="center"
            android:hint="@string/_05"
            android:inputType="number"
            android:maxLength="2"
            android:textCursorDrawable="@drawable/ic_green_cursor"
            app:layout_constraintStart_toStartOf="@id/tv_birth_date"
            app:layout_constraintTop_toBottomOf="@id/tv_birth_date" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_month"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:maxLength="2"
            android:background="@drawable/text_input_outline"
            android:gravity="center"
            android:hint="@string/_05"
            android:enabled="false"
            android:inputType="number"
            android:textCursorDrawable="@drawable/ic_green_cursor"
            app:layout_constraintStart_toEndOf="@id/et_day"
            app:layout_constraintTop_toBottomOf="@id/tv_birth_date" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_year"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/text_input_outline"
            android:gravity="center"
            android:hint="@string/_1995"
            android:inputType="number"
            android:enabled="false"
            android:layout_marginEnd="10dp"
            android:maxLength="4"
            android:textCursorDrawable="@drawable/ic_green_cursor"
            app:layout_constraintStart_toEndOf="@id/et_month"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_birth_date" />


        <TextView
            android:id="@+id/tv_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="42dp"
            android:lines="4"
            android:text="@string/str_info"
            android:textColor="@color/light_black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_birth_date"
            app:layout_constraintTop_toBottomOf="@id/et_day" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="16dp"
            android:clickable="false"
            android:enabled="false"
            android:background="@color/light_grey"
            android:gravity="center"
            android:text="@string/next"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_info" />

        <TextView
            android:id="@+id/tv_no_pan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/str_no_pan"
            android:textColor="@color/accent_color"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            android:clickable="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_next"
            android:focusable="true" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>